# TransportCatalogue

./: CMakeLists.txt  Doxyfile  JsonTests.cpp  JsonTests.hpp  README.md  SVGtests.cpp  SVGtests.hpp  domain.cpp  domain.h  geo.h  input_reader.cpp  input_reader.h  json.cpp  json.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  request_handler.cpp  request_handler.h  stat_reader.cpp  stat_reader.h  svg  svg.cpp  svg.h  test.json  transport_catalogue.cpp  transport_catalogue.h
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
Autotests/: JsonTests.cpp  JsonTests.hpp  SVGtests.cpp  SVGtests.hpp
Geographic_Module_Architecture/: documentation_Geographic
Geography_src/: domain.h
HandlingGettingRequests_Module_Architecture/: documentation_handlingGettingRequest
Json_Module_Architecture/: documentation_json
Json_parser_src/: json.h  json_reader.h
Mapping_src/: map_renderer.h  request_handler.cpp  request_handler.h  svg.cpp  transport_catalogue.cpp  transport_catalogue.h
Module_Dependency_Architecture/: documetation_module_dependency
Renderer_Module_Architecture/: documentation_renderer
Request_Module_Architecture/: documentation_request
RouteImitation_Module_Architecture/: documentation_RouteImitation
SVG_Module_Architecture/: documentation_svg
docs/html/: JsonTests_8hpp_source.html  SVGtests_8hpp_source.html  annotated.html  classHandlingGettingRequests_1_1FillingCatalogue-members.html  classHandlingGettingRequests_1_1FillingCatalogue.html  classRouteImitation_1_1HashStop-members.html  classRouteImitation_1_1HashStop.html  classRouteImitation_1_1TransportCatalogue-members.html  classRouteImitation_1_1TransportCatalogue.html  classSVGtest_1_1shapes_1_1Snowman-members.html  classSVGtest_1_1shapes_1_1Snowman.html  classSVGtest_1_1shapes_1_1Snowman__coll__graph.dot  classSVGtest_1_1shapes_1_1Star-members.html  classSVGtest_1_1shapes_1_1Star.html  classSVGtest_1_1shapes_1_1Star__inherit__graph.dot  classSVGtest_1_1shapes_1_1Triangle-members.html  classSVGtest_1_1shapes_1_1Triangle.html  classSVGtest_1_1shapes_1_1Triangle__coll__graph.dot  classes.html  classjson_1_1Document-members.html  classjson_1_1Document.html  classjson_1_1Node-members.html  classjson_1_1Node.html  classjson_1_1ParsingError.html  classjson_1_1ParsingError__coll__graph.dot  classrenderer_1_1DrawRoute-members.html  classrenderer_1_1DrawRoute.html  classrenderer_1_1SphereProjector-members.html  classrenderer_1_1SphereProjector.html  classrequest_1_1RequestHandler-members.html  classrequest_1_1RequestHandler.html  classsvg_1_1Circle-members.html  classsvg_1_1Circle.html  classsvg_1_1Circle__inherit__graph.dot  classsvg_1_1Document-members.html  classsvg_1_1Document.html  classsvg_1_1Document__coll__graph.dot  classsvg_1_1Drawable-members.html  classsvg_1_1Drawable.html  classsvg_1_1Drawable__inherit__graph.dot  (+80 more)
docs/latex/: JsonTests_8hpp_source.tex  SVGtests_8hpp_source.tex  annotated.tex  classHandlingGettingRequests_1_1FillingCatalogue.tex  classRouteImitation_1_1HashStop.tex  classjson_1_1Node.tex  (+53 more)
tests_/: info  output  test.txt
(+13 files in other folders)
